--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <nav>
+        <img src="img/Fotbot7 (4).png" alt="">
         <ul>
             <li>
                 <a href="index.html">Home</a>
@@ -34,7 +35,7 @@
                 <th>Ações de Gols</th>
                 <th>Assistências</th>
                 <th>Ações de Assistências</th>
-                <th>Ações</th>
+                <th>Remover</th>
             </tr>
         </thead>
         <tbody id="player-table-body">
