--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Jogadores de Futebol</title>
 </head>
@@ -21,7 +21,7 @@
             </li>
         </ul>
     </nav>
-     <form id="player-form">
+    <form id="player-form">
         <input type="number" id="number" placeholder="Número da Camisa" required>
         <input type="text" id="name" placeholder="Nome do Jogador" required>
         <button type="submit">Adicionar Jogador</button>
@@ -43,8 +43,7 @@
         </tbody>
     </table>
 
-   
-
     <script src="script.js"></script>
 </body>
 </html>
+
